# Bayesian-LORA

./: .gitignore  CLUSTER_READINESS_CHECKLIST.md  Makefile  README.md  README_LORA_ESTABLISHED.md  bayesian_experiments_log_4541344  bayesian_lora_experiment_log_4541539  bayesian_lora_experiment_log_4544621  experiment.sbatch  experiment_samsgld.sbatch  experiment_samsgld_online.sbatch  nalint2_lora_log_4531204  nalint2_lora_log_4532836  nalint2_lora_log_4532837  nalint2_lora_log_4532880  pyproject.toml  requirements.txt  requirements_lora.txt  sam_sgld_experiment_specifcations.md  sample_experiment.sbatch  setup.py  sgld_lora_experiment.md  test_import.py  test_samsgld_diagnostics.py  test_samsgld_diagnostics.sbatch
configs/: cifar100_wrn2810_sam_sgld.yaml  cifar100_wrn2810_sam_sgld_r1.yaml  cifar100_wrn2810_sgld.yaml  cifar10_resnet18_sgld.yaml  experiment_comparison_sst2_bert.yaml  experiment_imdb_bert_sam_sgld_r1.yaml  experiment_mrpc_distilbert_asgld.yaml  experiment_sst2_bert_sgld.yaml  experiment_sst2_roberta_sam_sgld.yaml  mrpc_roberta_lora_samsgld_online.yaml  mrpc_roberta_lora_samsgld_rank1.yaml  mrpc_roberta_lora_samsgld_ultra_quick_test.yaml  mrpc_roberta_lora_sgld.yaml
debug/: CLUSTER_IMPORT_FIX.md  CLUSTER_ISSUE_ANALYSIS.md  CLUSTER_READINESS_VERIFICATION.md  DEBUG_GUIDE.md  FINAL_STATUS.md  FINAL_TEST_RESULTS.md  IMPORT_ISSUE_RESOLVED.md  IMPORT_PATH_ISSUE_ANALYSIS.md  PROPER_DEBUG_GUIDE.md  QUICK_START.md  README.md  ROOT_CAUSE_IDENTIFIED.md  WHY_IT_WORKED_LOCALLY.md  cluster_troubleshooting.py  comprehensive_test.py  debug_lora.py  debug_suite.py  (+8 more)
(+54 files in other folders)
